[package]
name = "sort_benchmarking"
version = "0.1.0"
authors = ["Saurabh Raje <saurabh.mraje@gmail.com>"]
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
rayon_adaptive = {git = "https://github.com/wagnerf42/rayon-adaptive.git", branch = "lifetimes_smr"}
rayon_try_fold = {git = "https://github.com/wagnerf42/rayon_try_fold.git", branch = "bench/compileflags"}
rayon = "1.3.0"
rand = "0.7.3"
jemallocator = "0.3.2"
